--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap');
 body { 
-    background-color: #f6f6f6;
+    background-color: #eaebf0;
     color: #090909;
     font: 400 normal 1.1em 'Josefin Slab',  sans-serif;
 }
@@ -60,7 +60,7 @@ h4 {
 }
 
 
-.menue { 
+.menu { 
     display: inline;
     margin-right: auto;
 }
@@ -79,12 +79,45 @@ h4 {
 
 
 
-.searchbox { 
+.search-container {
+
+    width: 12em;
     
-    color: #ffffff;
-    width: 15em;
-    display: block;
     margin-left: auto;
     margin-right: auto;
     
+
+}
+
+.searchbar{
+    border: 0;
+    line-height: 1;
+    padding: 0 1em;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    width: 11.5em; 
+    margin: 0.3em;
+    border-radius: 2px;
+    background-color: #9b9bff;
+}
+
+.searchbar:hover {
+    background-color: rgb(113, 138, 190);
+}
+
+.linedge {
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: #ffffff;
+    
+    
+}
+
+.promotion {
+    font-size: 1.2em;
+    text-align: center;
+    background-color: #fae4a7;
+    padding: 1em;
 }
