--- a/css/style.css
+++ b/css/style.css
@@ -176,3 +176,18 @@ h4 {
 background-color: #f4bb90;
 }
 
+
+
+@media screen and (min-width: 600px) {
+    section {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 1em;
+    padding: 1em 1em;
+
+    
+
+    }
+
+   
+  }
