--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ h4 {
     width: 1em;
     height: 1em;
     cursor: pointer;
-    background-image: url('/img/starunchecked.png');
+    background-image: url('//img/starunchecked.png');
     background-size: 100%;
   }
 
