--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --full: url('https://raw.githubusercontent.com/Mani-Rezaeian/project-web-store-fall-2019/master/img/starfull.png');
-    --hollow: url('https://https://raw.githubusercontent.com/Mani-Rezaeian/project-web-store-fall-2019/master/img/starhollow.png');
+    --hollow: url('https://raw.githubusercontent.com/Mani-Rezaeian/project-web-store-fall-2019/master/img/starhollow.png');
   }
   
 body { 
